sumo/tests/sumo/errors/network/junction/testsuite.sumo
root__junction#id__empty1
root__junction#id__empty2
root__junction#id__empty3
root__junction#id__ungiven1
root__junction#id__ungiven2
root__junction#id__ungiven3
root__junction#id__false2

root__junction#type__empty1
root__junction#type__empty2
root__junction#type__empty3
root__junction#type__ungiven1
root__junction#type__ungiven2
root__junction#type__ungiven3
root__junction#type__false2

inclanes

